Added some code for ML

--- a/notebooks/comparison.ipynb
+++ b/notebooks/comparison.ipynb
@@ -7,14 +7,17 @@
    "outputs": [],
    "source": [
     "import itertools\n",
+    "import functools\n",
     "\n",
     "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
     "from dendropy import Tree,  DnaCharacterMatrix\n",
     "from dendropy.simulate import treesim\n",
     "from beaglepy import *\n",
     "from beaglepy.utils import print_resource_list, print_flags\n",
     "\n",
     "\n",
+    "np.random.seed(0)\n",
     "\n",
     "# eigen decomposition for the JC69 model\n",
     "evec = np.array([\n",
@@ -31,7 +34,7 @@
     "\n",
     "freqs = np.full((4,), 0.25)\n",
     "\n",
-    "\n",
+    "# simulate an alignment of length seq_len from a tree\n",
     "def simulate(tree, seq_len, alphabet='ACTG'):\n",
     "    edge_lengths = np.empty(len(tree.taxon_namespace) * 2 - 2)\n",
     "    for node in tree.postorder_node_iter():\n",
@@ -57,6 +60,13 @@
     "    \n",
     "def JC69_p_t(d):\n",
     "    return evec.reshape((4, 4)) @ (np.expand_dims(np.exp(evalues*d), axis=-1)*np.eye(4)) @ ivec.reshape((4, 4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulate tree and alignment"
    ]
   },
   {
@@ -89,11 +99,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tree likelihood with numpy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def calculate_log_prob(partials, weights, postorder_indices, edge_lengths):\n",
+    "    bls = np.expand_dims(edge_lengths, axis=1)\n",
+    "    mats = JC69_p_t(bls)\n",
+    "\n",
+    "    for node, left, right in postorder_indices:\n",
+    "        partials[node] = np.matmul(mats[left], partials[left]) * np.matmul(mats[right], partials[right])\n",
+    "    return np.sum(np.log(np.matmul(freqs, partials[postorder_indices[-1][0]])) * weights)\n",
+    "\n",
     "dna_map = {\n",
     "    \"A\": [1.0, 0.0, 0.0, 0.0],\n",
     "    \"C\": [0.0, 1.0, 0.0, 0.0],\n",
@@ -108,7 +133,9 @@
     "for idx, seq in enumerate(sequences.values()):\n",
     "    partial = [dna_map[nuc] for nuc in seq]\n",
     "    partials_beagle.append(list(itertools.chain.from_iterable(partial)))\n",
-    "    partials[idx,] = np.transpose(np.array(partial))"
+    "    partials[idx,] = np.transpose(np.array(partial))\n",
+    "\n",
+    "log_prob = functools.partial(calculate_log_prob, partials, weights, postorder_indices)"
    ]
   },
   {
@@ -120,19 +147,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.17 ms, sys: 2.69 ms, total: 7.86 ms\n",
-      "Wall time: 6.26 ms\n"
+      "CPU times: user 4 ms, sys: 1.87 ms, total: 5.87 ms\n",
+      "Wall time: 4.77 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "bls = np.expand_dims(edge_lengths, axis=1)\n",
-    "mats = JC69_p_t(bls)\n",
-    "\n",
-    "for node, left, right in postorder_indices:\n",
-    "    partials[node] = np.matmul(mats[left], partials[left]) * np.matmul(mats[right], partials[right])\n",
-    "log_prob_numpy = np.sum(np.log(np.matmul(freqs, partials[postorder_indices[-1][0]])) * weights)"
+    "lp_numpy = log_prob(edge_lengths)"
    ]
   },
   {
@@ -144,17 +166,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-89307.32684001184\n"
+      "-83662.60715657224\n"
      ]
     }
    ],
    "source": [
-    "print(log_prob_numpy)"
+    "print(lp_numpy)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 29.6 s, sys: 115 ms, total: 29.7 s\n",
+      "Wall time: 29.8 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "neg_log_prob = lambda log_edge_lengths: -log_prob(np.concatenate((np.exp(log_edge_lengths)+1e-8, np.zeros(1))))\n",
+    "res_numpy = minimize(neg_log_prob, np.log(edge_lengths[:-1]+1e-8), method='powell',\n",
+    "               options={'ftol': 0.0000001, 'maxiter': 10})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NUMPY ML:  -11285.771667028552\n"
+     ]
+    }
+   ],
+   "source": [
+    "lp_ml = log_prob(np.concatenate((np.exp(res_numpy.x)+1e-8, np.zeros(1))))\n",
+    "print('NUMPY ML: ', lp_ml)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tree likelihood with BEAGLE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -180,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -234,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,70 +318,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_log_prob_beagle(instance, postorder_indices, edge_lengths):\n",
+    "    update_transition_matrices(\n",
+    "                instance,  # instance\n",
+    "                0,  # eigenIndex\n",
+    "                list(range(len(edge_lengths))),  # probabilityIndices\n",
+    "                None,  # firstDerivativeIndices\n",
+    "                None,  # secondDerivativeIndices\n",
+    "                edge_lengths)  # edgeLengths\n",
+    "\n",
+    "    operations = []\n",
+    "    for node, left, right in postorder_indices:\n",
+    "        operations.append(BeagleOperation(node, BEAGLE_OP_NONE,\n",
+    "                                BEAGLE_OP_NONE, left, left, right, right))\n",
+    "    update_partials(\n",
+    "                instance,\n",
+    "                operations,\n",
+    "                BEAGLE_OP_NONE)\n",
+    "\n",
+    "    lp = np.empty(1)\n",
+    "    returnCode = calculate_root_log_likelihoods(\n",
+    "            instance,  # instance\n",
+    "            postorder_indices[-1][:1],  # bufferIndices\n",
+    "            [0],  # weights\n",
+    "            [0],  # stateFrequencies\n",
+    "            [BEAGLE_OP_NONE],  # cumulative scaling index\n",
+    "            1,  # count\n",
+    "            lp)\n",
+    "    return lp.copy()[0]\n",
+    "\n",
+    "log_prob_beagle = functools.partial(calculate_log_prob_beagle, instance, postorder_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.51 ms, sys: 948 µs, total: 2.46 ms\n",
-      "Wall time: 2.58 ms\n"
+      "CPU times: user 1.43 ms, sys: 741 µs, total: 2.17 ms\n",
+      "Wall time: 2.18 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "update_transition_matrices(\n",
-    "            instance,  # instance\n",
-    "            0,  # eigenIndex\n",
-    "            list(range(matrix_count)),  # probabilityIndices\n",
-    "            None,  # firstDerivativeIndices\n",
-    "            None,  # secondDerivativeIndices\n",
-    "            edge_lengths)  # edgeLengths\n",
-    "\n",
-    "operations = []\n",
-    "for node, left, right in postorder_indices:\n",
-    "    operations.append(BeagleOperation(node, BEAGLE_OP_NONE,\n",
-    "                            BEAGLE_OP_NONE, left, left, right, right))\n",
-    "update_partials(\n",
-    "            instance,\n",
-    "            operations,\n",
-    "            BEAGLE_OP_NONE)\n",
-    "\n",
-    "log_prob_beagle = np.empty(1)\n",
-    "returnCode = calculate_root_log_likelihoods(\n",
-    "        instance,  # instance\n",
-    "        postorder_indices[-1][:1],  # bufferIndices\n",
-    "        [0],  # weights\n",
-    "        [0],  # stateFrequencies\n",
-    "        [BEAGLE_OP_NONE],  # cumulative scaling index\n",
-    "        1,  # count\n",
-    "        log_prob_beagle)"
+    "lp_beagle = log_prob_beagle(edge_lengths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BEAGLE log prob: -89307.32684001215\n",
-      "NUMPY  log prob: -89307.32684001184\n"
+      "BEAGLE log prob: -83662.60715657199\n",
+      "NUMPY  log prob: -83662.60715657224\n"
      ]
     }
    ],
    "source": [
-    "print('BEAGLE log prob:', log_prob_beagle[0])\n",
-    "print('NUMPY  log prob:', log_prob_numpy)"
+    "print('BEAGLE log prob:', lp_beagle)\n",
+    "print('NUMPY  log prob:', lp_numpy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 26.5 s, sys: 287 ms, total: 26.8 s\n",
+      "Wall time: 26.6 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "neg_log_prob = lambda log_edge_lengths: -log_prob_beagle(np.concatenate((np.exp(log_edge_lengths)+1e-8, np.zeros(1))))\n",
+    "res = minimize(neg_log_prob, np.log(edge_lengths[:-1]+1e-8), method='powell',\n",
+    "               options={'ftol': 0.0000001, 'maxiter': 10})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BEAGLE ML:  -10415.852968783953 -11285.771666926767\n",
+      "NUMPY ML:   -11285.771667028552 -10415.852968794894\n"
+     ]
+    }
+   ],
+   "source": [
+    "lp_beagle_ml = log_prob_beagle(np.concatenate((np.exp(res.x)+1e-8, np.zeros(1))))\n",
+    "print('BEAGLE ML: ', lp_beagle_ml, log_prob_beagle(np.concatenate((np.exp(res_numpy.x)+1e-8, np.zeros(1)))))\n",
+    "print('NUMPY ML:  ', lp_ml, log_prob(np.concatenate((np.exp(res.x)+1e-8, np.zeros(1)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
